# kanban

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
server/: .env.example  .gitignore  Dockerfile  build_error.txt  compose_up.txt  gunicorn.conf.py  pyproject.toml
server/apps/ai/: llm.py  models.py  serializers.py  throttles.py  urls.py  views.py
server/apps/ai/agents/: graph.py
server/apps/ai/migrations/: 0001_initial.py
server/apps/board_templates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/board_templates/migrations/: 0001_initial.py
server/apps/boards/: activity.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/boards/migrations/: 0001_initial.py  0002_activity.py  0003_remove_is_completed.py  0004_add_checklist_item.py  0005_add_comment.py  0006_attachment.py  0007_card_estimated_hours_timeentry.py  0008_card_priority.py  0009_saved_filter.py  0010_card_search_vector.py
server/apps/notifications/: models.py  serializers.py  urls.py  views.py
server/apps/realtime/: broadcast.py  consumers.py  middleware.py  notification_consumer.py  routing.py  workspace_consumer.py
server/apps/users/: admin.py  models.py  serializers.py  social_views.py  urls.py  views.py
server/apps/workspaces/: admin.py  apps.py  emails.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/config/: asgi.py  urls.py
server/config/settings/: base.py  development.py  production.py
server/scripts/: seed.py
server/templates/workspaces/: invitation_email.html
(+90 files in other folders)
